--- a/index.html
+++ b/index.html
@@ -1,15 +1,326 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>HW5</title>
-		<style>
-			body { margin: 0; }
-		</style>
-		<script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js'></script>
-	</head>
-	<body>
-		<script src="src/hw5.js" type="module"></script>
+<head>
+  <meta charset="utf-8">
+  <title>HW6</title>
 
-	</body>
+  <!-- 7-segment font -->
+  <link href="https://fonts.googleapis.com/css2?family=DS-Digital&display=swap" rel="stylesheet" />
+
+  <style>
+    body { margin: 0; overflow: hidden; }
+
+    /* Scoreboard backboard */
+    #scoreboard {
+      position: absolute;
+      top: 20px; left: 50%;
+      transform: translateX(-50%);
+      display: flex; align-items: center;
+      background: rgba(0,0,0,0.7);
+      padding: 12px 24px; border-radius: 8px;
+      pointer-events: none; user-select: none;
+      z-index: 10;
+    }
+    .team {
+      display: flex; flex-direction: column;
+      align-items: center; color: #fff; margin: 0 24px;
+    }
+    .team-label { font-size: 18px; font-weight: bold; margin-bottom: 4px; }
+    .team-score {
+      font-family: 'DS-Digital', monospace;
+      font-size: 48px; color: #E33;
+      text-shadow: 0 0 8px #800; line-height: 1;
+    }
+    .team-stats {
+      font-size: 12px; margin-top: 6px;
+      text-align: center; color: #ddd;
+      font-family: sans-serif; line-height: 1.4;
+    }
+    .clock {
+      font-family: 'DS-Digital', monospace;
+      font-size: 48px; color: #E33;
+      text-shadow: 0 0 8px #800;
+      line-height: 1; margin: 0 24px;
+    }
+
+    #shot-message {
+      position: absolute; top: 140px; left: 50%;
+      transform: translateX(-50%);
+      background: rgba(0,0,0,0.7); color: #0f0;
+      padding: 8px 16px; font-size: 20px;
+      font-weight: bold; border-radius: 6px;
+      font-family: Arial, sans-serif;
+      pointer-events: none; opacity: 0; z-index: 10;
+    }
+    @keyframes slideFade {
+      0%   { opacity: 0; transform: translate(-50%, -20px) scale(0.9); }
+      10%  { opacity: 1; transform: translate(-50%,   0  ) scale(1);   }
+      80%  { opacity: 1; transform: translate(-50%,   0  ) scale(1);   }
+      100% { opacity: 0; transform: translate(-50%, -20px) scale(1);   }
+    }
+    #shot-message.show { animation: slideFade 2s ease-in-out forwards; }
+
+    .modal {
+      display: none;
+      position: fixed;
+      top: 50%; left: 50%;
+      transform: translate(-50%, -50%);
+      background: rgba(0,0,0,0.9);
+      color: #fff;
+      padding: 24px;
+      border-radius: 8px;
+      text-align: center;
+      z-index: 150;
+      width: 340px;
+    }
+    .modal.show { display: block; }
+    .modal input {
+      font-size: 16px;
+      padding: 6px 10px;
+      width: 200px;
+    }
+    .modal button {
+      padding: 6px 12px;
+      margin: 0 4px;
+      background: #444;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    /* Game-over overlay */
+    #game-over {
+      display: none; position: fixed;
+      top: 0; left: 0; width: 100%; height: 100%;
+      background: rgba(0,0,0,0.85);
+      color: #fff; font-family: sans-serif;
+      font-size: 24px; justify-content: center;
+      align-items: center; text-align: center;
+      z-index: 200;
+    }
+    #game-over.show { display: flex; }
+    #game-over button {
+      margin: 12px; padding: 8px 16px;
+      background: #222; color: #fff;
+      border: none; border-radius: 4px;
+      cursor: pointer; font-size: 18px;
+    }
+
+    /* ===== Polished Game Mode Modal Styles ===== */
+    #mode-modal h2 { margin-top: 0; }
+    .mode-options {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 18px;
+      margin-bottom: 20px;
+      margin-top: 18px;
+    }
+    /* Custom radio styling */
+    .custom-radio {
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+      font-size: 18px;
+      font-family: inherit;
+      font-weight: 500;
+      position: relative;
+      padding-left: 38px;
+      min-height: 32px;
+      user-select: none;
+    }
+    .custom-radio input[type="radio"] {
+      opacity: 0;
+      position: absolute;
+      left: 0;
+      width: 28px;
+      height: 28px;
+      cursor: pointer;
+      margin: 0;
+    }
+    .radio-mark {
+      position: absolute;
+      left: 0;
+      top: 2px;
+      height: 28px;
+      width: 28px;
+      background: linear-gradient(135deg, #222 60%, #006eff 120%);
+      border-radius: 50%;
+      border: 2.5px solid #6cb8ff;
+      box-shadow: 0 2px 12px rgba(80,150,255,0.25);
+      transition: border 0.2s, box-shadow 0.2s;
+    }
+    .custom-radio input[type="radio"]:checked ~ .radio-mark {
+      border: 3.5px solid #11c7ff;
+      box-shadow: 0 0 0 4px rgba(0,174,255,0.08);
+    }
+    .radio-mark:after {
+      content: "";
+      position: absolute;
+      display: none;
+    }
+    .custom-radio input[type="radio"]:checked ~ .radio-mark:after {
+      display: block;
+    }
+    .custom-radio .radio-mark:after {
+      left: 7.5px;
+      top: 7.5px;
+      width: 13px;
+      height: 13px;
+      border-radius: 50%;
+      background: #11c7ff;
+      box-shadow: 0 0 6px #00aaff88;
+      content: "";
+      position: absolute;
+    }
+    /* Stylish "Close" button */
+    .big-button {
+      margin-top: 12px;
+      font-size: 20px;
+      font-family: inherit;
+      padding: 12px 40px;
+      border-radius: 25px;
+      border: none;
+      background: linear-gradient(90deg, #0af 0%, #006eff 100%);
+      color: #fff;
+      font-weight: bold;
+      letter-spacing: 1px;
+      box-shadow: 0 3px 20px #006eff55;
+      cursor: pointer;
+      transition: background 0.2s, box-shadow 0.2s, transform 0.1s;
+    }
+    .big-button:hover, .big-button:focus {
+      background: linear-gradient(90deg, #006eff 0%, #0af 100%);
+      box-shadow: 0 5px 30px #0af7;
+      transform: scale(1.05);
+    }
+  </style>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+</head>
+<body>
+
+  <!-- Mode Picker -->
+  <div id="mode-modal" class="modal">
+    <h2>Select Game Mode</h2>
+    <div class="mode-options">
+      <label class="custom-radio">
+        <input type="radio" name="mode" value="regular" checked>
+        <span class="radio-mark"></span>
+        <span>Regular (24s)</span>
+      </label>
+      <label class="custom-radio">
+        <input type="radio" name="mode" value="challenge">
+        <span class="radio-mark"></span>
+        <span>Challenge (60s)</span>
+      </label>
+      <label class="custom-radio">
+        <input type="radio" name="mode" value="free">
+        <span class="radio-mark"></span>
+        <span>Free Throw (Unlimited)</span>
+      </label>
+    </div>
+    <button id="close-mode-modal" class="big-button">Close</button>
+  </div>
+
+  <!-- Leaderboard -->
+  <div id="leaderboard-modal" class="modal">
+    <h2>🏆 Leaderboard (<span id="leaderboard-mode-name"></span>)</h2>
+    <ol id="leaderboard-list" style="text-align:left; padding-left: 20px;"></ol>
+    <button onclick="document.getElementById('leaderboard-modal').classList.remove('show')">Close</button>
+  </div>
+
+  <!-- Name Entry -->
+  <div id="name-entry-modal" class="modal">
+    <h2>Enter your name</h2>
+    <input type="text" id="player-name-input" placeholder="Your name" />
+    <div style="margin-top: 12px;">
+      <button onclick="submitName()">OK</button>
+      <button onclick="cancelName()">Cancel</button>
+    </div>
+  </div>
+
+  <!-- Scoreboard -->
+  <div id="scoreboard">
+    <div class="team" id="home-block">
+      <div class="team-label">HOME</div>
+      <div class="team-score" id="home-score">00</div>
+      <div class="team-stats">
+        Shot Attempts: <span id="home-attempts">0</span><br>
+        Shots Made:    <span id="home-made">0</span><br>
+        Shooting %:    <span id="home-pct">0.0%</span><br>
+        Combo Streak:  <span id="home-combo">0</span>
+      </div>
+    </div>
+    <div class="clock" id="game-clock">00:24</div>
+    <div class="team" id="guest-block">
+      <div class="team-label">GUEST</div>
+      <div class="team-score" id="guest-score">00</div>
+      <div class="team-stats">
+        Shot Attempts: <span id="guest-attempts">0</span><br>
+        Shots Made:    <span id="guest-made">0</span><br>
+        Shooting %:    <span id="guest-pct">0.0%</span><br>
+        Combo Streak:  <span id="guest-combo">0</span>
+      </div>
+    </div>
+  </div>
+
+  <div id="shot-message"></div>
+
+  <!-- Game Over -->
+  <div id="game-over">
+    <div>
+      <div id="game-over-text">GAME OVER</div>
+      <button id="restart-challenge">Restart Challenge</button>
+      <button id="switch-regular">Back to Regular</button>
+    </div>
+  </div>
+
+  <!-- Your Game Module -->
+  <script type="module" src="src/hw5.js"></script>
+  <script>
+    const modeModal = document.getElementById('mode-modal');
+    const closeModalBtn = document.getElementById('close-mode-modal');
+    const modeInputs = document.querySelectorAll('input[name="mode"]');
+
+    function openModal()  { modeModal.classList.add('show'); }
+    function closeModal() { modeModal.classList.remove('show'); }
+
+    window.addEventListener('keydown', e => {
+      if (e.key.toLowerCase() === 'm') {
+        e.preventDefault();
+        openModal();
+      }
+    });
+    closeModalBtn.addEventListener('click', closeModal);
+
+    modeInputs.forEach(radio => {
+      radio.addEventListener('change', e => {
+        window.mode = e.target.value;
+        if (typeof window.resetGameForMode === 'function') {
+          window.resetGameForMode();
+        }
+        closeModal();
+      });
+    });
+
+    let pendingScore = null;
+    function submitName() {
+      const name = document.getElementById('player-name-input').value.trim() || 'Anonymous';
+      document.getElementById('name-entry-modal').classList.remove('show');
+      if (pendingScore) {
+        saveScoreToLeaderboard(name, pendingScore.score, pendingScore.mode);
+        showLeaderboardForMode(pendingScore.mode);
+        openModal();
+        resetGameForMode();
+        pendingScore = null;
+      }
+    }
+    function cancelName() {
+      document.getElementById('name-entry-modal').classList.remove('show');
+      pendingScore = null;
+    }
+  </script>
+</body>
 </html>
